# Reverie

./: .gitignore  .gitmessage  CHANGELOG-util.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  git-cliff.toml  release-plz.toml  rustfmt.toml
.chglog/: config-util.yml  config.yml
.github/: copilot-instructions.md  renovate.json
.github/workflows/: ghalint.yml  mdbook.yml  release-pr.yml  release.yml  rust.yml
docs/: book.toml  coordinate.md
docs/assets/: elasticlunr.js  fzf.umd.js
docs/src/: README.md  SUMMARY.md
docs/src/user_guide/: coordinate.md
examples/: hello.rs
examples/craft/: Cargo.toml  main.rs
examples/craft/resources/: shader.fs
examples/craft/src/: camera.rs  collision.rs  config.rs  main.rs  player.rs  raycast.rs  util.rs  world.rs
examples/misc/: Cargo.toml
examples/misc/src/: main.rs
examples/opengl/craft/: Cargo.toml
examples/opengl/craft/src/: collision.rs  config.rs  main.rs  player.rs  raycast.rs  world.rs
examples/opengl/raw/: Cargo.toml
examples/opengl/raw/src/: main.rs  shader.vert
examples/opengl/window/: Cargo.toml
examples/raw/: Cargo.toml
examples/raw/src/: main.rs  shader.frag
examples/window/: Cargo.toml
examples/window/src/: main.rs
examples/yagami-craft/: Cargo.toml
examples/yagami-craft/resources/: shader.fs
examples/yagami-craft/src/: camera.rs  main.rs  world.rs
lib/gl/: Cargo.toml
lib/gl/src/: build.rs  lib.rs
resources/: uv.frag
reverie/: Cargo.toml  build.rs
reverie-engine/: CHANGELOG.md  Cargo.toml
reverie-engine-opengl/: Cargo.toml  build.rs
reverie-engine-opengl/resources/: color3d.vert  uv.vert
reverie-engine-opengl/src/: camera.rs  context.rs  engine.rs  gl.rs  math.rs  shader.rs  vao.rs  window.rs
reverie-engine-opengl/src/gui/: layout.rs  vao_builder.rs
reverie-engine-opengl/src/platform/: windows.rs
reverie-engine-opengl/src/texture/: image_manager.rs  texture_atlas.rs
reverie-engine-opengl/src/vao/: buffer.rs  color_vao.rs  config.rs  renderer.rs  vertex.rs
reverie-engine-opengl/src/vao/texture_vao/: builder.rs
reverie-engine-opengl/src/window/: builder.rs  event_loop.rs  input.rs
reverie-engine-opengl/src/window/input/: cursor.rs
reverie-engine/src/: camera.rs  game.rs  lib.rs  model.rs  render.rs  scene.rs  shader.rs  shader.wgsl  texture.rs  types.rs  wgpu_layer.rs  wgpu_wrapper.rs  window.rs  winit_app.rs
reverie-engine/src/gui/: layout.rs  mod.rs  vao_builder.rs
reverie-engine/src/model/: colored.rs  sprite.rs  wavefront.rs
reverie-engine/src/render/: buffer.rs  colored.rs  colored.wgsl  sprite.rs  sprite.wgsl  texture.rs  uniform.rs  vertex.rs  wavefront.rs
reverie-engine/src/scene/: components.rs  entity.rs  frame.rs  system.rs
reverie-engine/src/scene/components/: colored.rs  model.rs  sprite.rs  transform.rs
reverie-engine/src/texture/: image_manager.rs
reverie-engine/src/wgpu_wrapper/: buffer.rs  sprite.rs  texture.rs  vertex.rs
reverie-engine/src/window/: mod.rs  window.rs
reverie-engine/src/window/ms_windows/: mod.rs  ms_windows.rs
reverie-util/: CHANGELOG.md  Cargo.toml  README.md
reverie-util/src/: interpolation.rs  lib.rs  math.rs
reverie-util/src/interpolation/: types.rs
reverie-util/src/math/: macros.rs
reverie/resources/: color3d.frag  uv.frag
reverie/src/: camera.rs  context.rs  engine.rs  gl.rs  gui.rs  interpolation.rs  lib.rs  math.rs  platform.rs  shader.rs  texture.rs  types.rs  vao.rs  window.rs
reverie/src/gui/: layout.rs  vao_builder.rs
reverie/src/math/: macros.rs
reverie/src/platform/: windows.rs
reverie/src/texture/: image_manager.rs  texture_atlas.rs
reverie/src/vao/: buffer.rs  color_vao.rs  config.rs  renderer.rs  texture_vao.rs  vao_buffer.rs  vao_builder.rs  vao_config.rs  vertex.rs
reverie/src/vao/texture_vao/: buffer.rs  builder.rs
reverie/src/window/: builder.rs  event_loop.rs  input.rs
reverie/src/window/input/: cursor.rs
rsc/shader/: default.vs
sample_app/: Cargo.toml
sample_app/src/: main.rs
src/: context.rs  engine.rs  gl.rs  interpolation.rs  lib.rs  shader.rs  shader.wgsl  texture.rs  types.rs  vertex.rs  window.rs
src/gui/: layout.rs  vao_builder.rs
src/interpolation/: mod.rs  types.rs
src/texture/: dynamic_texture_atlas.rs  image_manager.rs  mod.rs  texture_atlas.rs
src/util/: mod.rs
src/util/ranged/: mod.rs
src/vao/: mod.rs  vao_buffer.rs  vao_builder.rs  vao_config.rs
