[workspace.package]
version = "0.4.0"
authors  = ["yuma140902 <yuma140902@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuma140902/Reverie"
rust-version = "1.86.0"

[workspace]
members = [
  "examples/*",
  "reverie-engine",
  "reverie-util",
]
resolver = "2"

[workspace.dependencies]
reverie-util = { version = "0.4.0", path = "./reverie-util" }
reverie-engine = { version = "0.4.0", path = "./reverie-engine" }

anyhow = "1.0.98"
approx = "0.5.1"
bytemuck = { version = "1.23.0", features = ["derive"] }
dotenvy = "0.15.7"
etagere = "0.2.15"
hecs = "0.10.5"
image = { version = "0.25.6", default-features = false }
nalgebra = { version = "0.33.2", features = ["bytemuck"] }
nalgebra-glm = "0.19.0"
newtype-ops = "0.1.4"
pollster = "0.4.0"
slotmap = "1.0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
wgpu = "25.0.2"
winit = "0.30.11"
