[workspace]
resolver = "3"
members = [
  "examples/*",
  "reverie-engine",
  "reverie-util",
]

[workspace.package]
version = "0.5.0"
authors = ["yuma140902 <yuma140902@gmail.com>"]
edition = "2024"
rust-version = "1.92.0"
repository = "https://github.com/yuma140902/Reverie"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
approx = "0.5.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
dotenvy = "0.15.7"
encase = "0.12.0"
etagere = "0.3.0"
image = { version = "0.25.10", default-features = false }
naga = "29.0.1"
nalgebra = { version = "0.34.2", features = ["bytemuck"] }
nalgebra-glm = "0.20.0"
newtype-ops = "0.1.4"
pollster = "0.4.0"
proptest = "1.11.0"
reverie-engine = { path = "./reverie-engine", version = "0.5.0" }
reverie-util = { path = "./reverie-util", version = "0.5.0" }
rstest = "0.26.1"
slotmap = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
wgpu = "29.0.1"
winit = "0.30.13"
