[package]
name = "reverie-engine-opengl"
version.workspace = true
authors.workspace = true
build = "./build.rs"
categories = ["game-engines"]
description = "A toy game engine backed by OpenGL"
edition.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[package.metadata.cargo-all-features]
denylist = [ "raw_gl_context" ]

[features]
default = ["glutin"]
raw_gl_context = ["dep:raw-gl-context", "winit"]
glutin = ["dep:glutin", "winit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reverie-util.workspace = true

c_str_macro = "1.0.3"
glutin = { version = "0.29.1", optional = true }
image = { version = "0.24.9", default-features = false, features = ["png"] }
nalgebra-glm = "0.17.0"
raw-gl-context = { version = "0.1.2", optional = true }
winit = { version = "0.27.5", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.40.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
gl_generator = "0.14.0"
