[package]
name = "reverie-engine"
version.workspace = true
authors.workspace = true
categories = ["game-engines"]
description = "A toy game engine"
edition.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
