[package]
name = "reverie-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A toy game engine"
readme = "../README.md"
repository.workspace = true
license.workspace = true
categories = ["game-engines"]

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
encase.workspace = true
etagere.workspace = true
image.workspace = true
nalgebra.workspace = true
nalgebra-glm.workspace = true
pollster.workspace = true
qcell.workspace = true
slotmap.workspace = true
tracing.workspace = true
tracing-unwrap.workspace = true
wgpu.workspace = true
winit.workspace = true

[dev-dependencies]
naga.workspace = true
rstest.workspace = true
