[package]
name = "reverie-util"
version.workspace = true
authors.workspace = true
categories = ["game-development"]
description = "Utilities for reverie-engine"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[dependencies]
approx = "0.5.1"
nalgebra = "0.31.4"
newtype-ops = "0.1.4"
