[package]
name = "reverie-util"
version = "0.0.8"
authors.workspace = true
categories = ["game-development"]
description = "Utilities for reverie-engine"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[dependencies]
approx.workspace = true
nalgebra.workspace = true
newtype-ops.workspace = true
