[package]
name = "reverie-engine"
version = "0.0.6"
license = "MPL-2.0"
edition = "2021"
authors  = ["yuma140902 <yuma140902@gmail.com>"]
description = "A toy game engine"
readme = "../README.md"
repository = "https://github.com/yuma140902/Reverie"
categories = ["game-engines"]
build = "src/build.rs"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[package.metadata.cargo-all-features]
denylist = [ "raw_gl_context" ]

[features]
default = ["glutin"]
raw_gl_context = ["dep:raw-gl-context", "winit"]
glutin = ["dep:glutin", "winit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
c_str_macro = "1.0.3"
reverie-util = { version = "0.0.0", path = "../reverie-util" }
raw-gl-context = { version = "0.1.2", optional = true }
winit = { version = "0.27.2", optional = true }
glutin = { version = "0.29.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.40.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
gl_generator = "0.14.0"

