[package]
name = "reverie-engine"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A toy game engine"
readme = "../README.md"
categories = ["game-engines"]
build = "src/build.rs"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[package.metadata.cargo-all-features]
denylist = [ "raw_gl_context" ]

[features]
default = ["glutin"]
raw_gl_context = ["dep:raw-gl-context", "winit"]
glutin = ["dep:glutin", "winit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image.workspace = true
c_str_macro.workspace = true
reverie-util.workspace = true
nalgebra-glm.workspace = true
raw-gl-context = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
glutin = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[build-dependencies]
gl_generator.workspace = true

