[package]
name = "example-craft"
version = "0.1.0"
edition.workspace = true

[dependencies]
reverie-engine.workspace = true
nalgebra = { workspace = true, features = ["serde-serialize"] }
nalgebra-glm.workspace = true
c_str_macro.workspace = true
image.workspace = true
parry3d.workspace = true
serde_json.workspace = true
serde.workspace = true
once_cell.workspace = true
