[package]
name = "example-misc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
dotenvy.workspace = true
etagere.workspace = true
image = { workspace = true, default-features = false, features = ["png"] }
nalgebra.workspace = true
rand = { version = "0.9.1", features = ["small_rng"] }
reverie-engine.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
wgpu.workspace = true
winit.workspace = true
