[package]
name = "example-craft"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
reverie-engine-opengl.workspace = true

c_str_macro = "1.0.3"
image = { version = "0.24.9", default-features = false, features = ["png"] }
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
nalgebra-glm = "0.17.0"
once_cell = "1.19.0"
parry3d = "0.9.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
