[package]
name = "old-example-craft"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
reverie-engine-opengl.workspace = true

c_str_macro = "1.0.3"
image = { version = "0.25.5", default-features = false, features = ["png"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nalgebra-glm = "0.19.0"
once_cell = "1.20.2"
parry3d = "0.17.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
